# bitcoin-regtest-api

server/: .env  Cargo.toml
server/src/: config.rs  logger.rs  macros.rs  main.rs
server/src/app/: mod.rs
server/src/app/regtest/: regtest.http  views.rs
