[package]
name = "bitcoin-regtest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-cors = "0.7.0"
actix-http = "3.6.0"
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
anyhow = "1.0.80"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.30"
dirs = "5.0.1"
bytes = "1.7.2"
anyhow-to-actix-error = "0.1.1"
slug = "0.1.6"
lazy_static = "1.5.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
bitcoincore-rpc = "0.19.0"

